# app_config_template

./: .dockerignore  .gitignore  README.md  compose.yml  init.sh
.bob/: mcp.example.json
.bob/rules/: sonarqube-mcp.md  sonatype-mcp.md  zap-mcp.md
.github/: copilot-instructions.md
.template/: bootstrap.py  template-config.json
backend/: Dockerfile  pyproject.toml  pytest.toml  ruff.toml  sonar-project.properties  tox.toml
backend/tests/: test_smoke.py
frontend/: index.html  package.json  sonar-project.properties  vite.config.ts
frontend/src/: main.ts
scripts/: compose-up.sh  configure-bob-mcp.sh  configure-ports.sh  sonar-bootstrap.sh  sonar-mcp-up.sh  sonar-scan.sh  tasks.sh  zap-scan.sh
zap/: baseline.conf
