[project]
name = "__BACKEND_NAME__"
version = "0.1.0"
description = "Backend for __PROJECT_NAME__"
readme = "../README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/__PACKAGE_NAME__"]

[dependency-groups]
dev = [
    "hatchling",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.6.2",
    "sphinx-copybutton>=0.5.2",
    "tox>=4.36.1",
    "tox-uv>=1.29.0",
    "ty>=0.0.17",
]

[tool.coverage.run]
source = ["src/__PACKAGE_NAME__"]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
